Show webpage templates in general admin template dashboard